<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#51C5D81B"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/txtStatusPENDAFTARAN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PENDAFTARAN"
        android:typeface="monospace"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edit3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="8"
        android:hint="@string/nama_app"
        android:inputType="textPersonName"/>


    <EditText
        android:id="@+id/editUN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nama_belakang"
        android:inputType="textPersonName"/>
    </TableRow>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/editPass"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tempat_lahir"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:inputType="number" />
    </TableRow>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Alamat"
        android:inputType="text" />


    <TextView
        android:id="@+id/textview10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Jenis_kelamin"
        android:textSize="15sp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/laki_laki" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Perempuan" />
    </RadioGroup>


    <TextView
        android:id="@+id/textview5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/agama"
        android:textSize="15sp"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_Islam"
                android:ems="10"/>
            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_Kristen"
                android:ems="10"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_Khatolik"
                android:ems="10"/>
            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_Hindu"
                android:ems="10"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_Budha"
                android:ems="10"/>
            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/konghucu"
                android:ems="10"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioButton
                android:id="@+id/radioButton8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_Aliran_kepercayaan"
                android:ems="10"/>
        </TableRow>
    </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="9sp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/EdTelepon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/Telepon"
                android:textColor="#000000"
                android:textColorHint="#505050" />


            <EditText
                android:id="@+id/EdEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/Email"
                android:textColor="#000000"
                android:textColorHint="#505050" />

            <EditText
                android:id="@+id/EdPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/Password"
                android:textColor="#000000"
                android:textColorHint="#505050" />
        </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/Kembali" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/Daftar" />
    </TableRow>

        </LinearLayout>






